# player_orderer

./: CMakeLists.txt  README.md  player_orderer.cpp
